Send every movement of the matrix from the raspberry joystick to the client

--- a/views/index.html
+++ b/views/index.html
@@ -25,20 +25,17 @@
 <body>
 <div class="container">
     <div class="column col-6 p-centered">
-        <h1>Welcome to balena!</h1>
-        <div class="timeline">
-            <div class="timeline-item" id="timeline-balena-docs">
-                <div class="timeline-left">
-                    <a class="timeline-icon" href="#timeline-balena-docs"></a>
-                </div>
-                <div class="timeline-content">
-                    <a class="btn btn-primary" href="/turn-on-light/123">Turn on the light!</a>
-                </div>
-            </div>
-        </div>
+        <h1>Select a color</h1>
+        <div class="pickr"></div>
     </div>
     <div class="column col-6 p-centered">
-        <div class="pickr"></div>
+        <input type="text" class="input_text">
+    </div>
+
+    <div class="column col-6 p-centered">
+        <h1>Matrix</h1>
+        <div id="matrix"></div>
+        </table>
     </div>
 </div>
 <script src="js/main.js"></script>
